<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">Improve My City - Demo</string>
    <string name="CERTH">CERTH, iti.gr</string>
    <string name="welcometo">Morvedre Citizens</string>
    <string name="Login">ACCESO</string>
    <string name="skipLogin">Entrar como Invitado</string>
    <string name="Registration">Registrarse</string>
    <string name="newaccount">Nueva Cuenta</string>
    <string name="loginInstr">Acceder o Registrar Usuario y Contraseña</string>
    <string name="tryagain">Nombre Usuario o Contraseña Erroneos</string>
    <string name="Yourfullname">Su Nombre completo</string>
    <string name="Createanaccount">Crear una cuenta. No ponga acentos ni simbolos</string>
    <string name="Giveausername">Seleccione nombre de Usuario de Acceso</string>
    <string name="Givealsoyourname">Repita su nombre de Usuario</string>
    <string name="NotValidEmail">E-Mail no valido</string>
    <string name="PasswordShorter">Contraseña debe tener menos de 16 caracteres</string>
    <string name="Sending">Enviado sus datos, espere por favor</string>
    <string name="Notification">Notificado</string>
    <string name="Finish">Finalizar</string>
    <string name="email">e-mail</string>
    <string name="Downloading">Descargando</string>
    <string name="Downloaded">Descargado</string>
    <string name="NewIssues">Nuevas Incidencias</string>
    <string name="NewLocation">Incidencias alrededor de su posicion</string>
    <string name="NewDistance">Incidencias sin Categoria</string>
    <string name="NewFilters">Incidencias Filtros</string>
    <string name="ReportAnIssue">Enviar Incidencia</string>
    <string name="NormalMap">Normal</string>
    <string name="Satellite">Satelite</string>
    <string name="OnProgress">En Progreso</string>
    <string name="RefreshOK">Refresco OK</string>
    <string name="OpenIssue">Abierto</string>
    <string name="AckIssue">Recibida Notificacion</string>
    <string name="ClosedIssue">Cerrado</string>
    <string name="Votes">Votos</string>
    <string name="Reported">Reportado con Exito</string>
    <string name="days">dias</string>
    <string name="hours">horas</string>
    <string name="minutes">minutos</string>
    <string name="ago">hace</string>
    <string name="Main">Principal</string>
    <string name="Report">Nueva Incidencia</string>
    <string name="Filters">Filtros</string>
    <string name="Setup">SetUP</string>
    <string name="List">Lista</string>
    <string name="View3D">Vista 3D</string>
    <string name="State">Provincia</string>
    <string name="SelAll">Seleccion/Deseleccion Total</string>
    <string name="Reverse">Invertir Seleccion Total</string>
    <string name="Issues">Incidencias</string>
    <string name="MyIssues">Mis Incidencias</string>
	<string name="GoSetup">Solo usuarios Registrados pueden enviar Incidencias. Por favor Registrese.</string>
    <string name="ReportNew">Reportar Nueva Incidencia</string>
	<string name="back">Volver</string>
	<string name="STitle">Titulo Corto</string>
	<string name="Category">Categoria</string>
	<string name="Address">Direccion</string>
	<string name="Shoot">Hacer Foto</string>
	<string name="Attach">Adjuntar Imagen</string>
	<string name="Description">Descripcion</string>
	<string name="Proceed">Proceso</string>
	<string name="ReportIss">Reportar Incidencia</string>
	<string name="IssueReported">Incidencia Reportada</string>
	<string name="LongerTitle">Longer title is needed</string>
	<string name="PleaseAddress">Por favor escriba manualmente direccion</string>
	<string name="Image">Imagen</string>
	<string name="Attachanimage">Adjuntar Imagen</string>
	<string name="Gallery">Galeria</string>
	<string name="Camera">Camara</string>
	<string name="Clear">Limpiar</string>
	<string name="Issueoutofmunicipalitylimits">Incidencia fuera de los limites comarcales</string>
	<string name="Reportedby">Reportado por</string>
	<string name="Viewed">Visto</string>
	<string name="Status">Estado</string>
	<string name="AddComment">Comentarios</string>
	<string name="VotesFix">Votos de Prioridad Ciudadana</string>
	<string name="VoteToFix">Vote para fijar prioridad</string>
	<string name="CommentCreat">Comentario Efectuado</string>
	<string name="AgoBy">Efectuado por</string>
	<string name="AlreadyVoted">Usted ya ha votado, gracias</string>
	<string name="OnlyRegistered">Only registered users can comment.</string>
	<string name="PressLogin">Click para entrar</string>
	<string name="Map">Mapa</string>
    <string name="Return">Volver</string>
    <string name="CustAccount">Cuenta de Usuario</string>
    <string name="Username">Nombre de Usuario</string>
    <string name="Password">Contrasegna</string>
    <string name="LatinChars">Caracteres Latinos</string>
    <string name="GreekChars">Letras Griegas admitidas</string>
    <string name="AccountOperations">Cuenta de Operaciones</string>
    <string name="LoginRegisterRemindLogout">Entrar/Registrar/Recordar/Salir</string>
    <string-array name="AccountItems">
        <item>ENTRAR</item>
        <item>REGISTRAR</item>
        <item>RECORDAR</item>
        <item>SALIR</item>
    </string-array>
    <string-array name="Language">
        <item>el - Ελληνικά</item>
        <item>en - English</item>
		<item>es - Spanish</item>
    </string-array>
    <string name="LangSel">Selector de Idioma</string>
    <string name="IdonothaveA">Yo no tengo una cuenta</string>
    <string name="Iforgot">Yo he olvidado la contraseña</string>
    <string name="Location">Localizacion</string>
    <string name="ViewRange">Ver Rango</string>
    <string name="ViewRadius">desde actual posicion</string>
    <string name="IssuesNo">Numero de Incidencias</string>
    <string name="IssuesMaxNo">Maximo numero de Incidencias para descarga</string>
    <string name="RemindTitle">Enviar recordatorio a:</string>
    <string name="RemindHint">Escribir su correo aqui</string>
    <string name="RemindButtonText">Enviar contraseña al e-mail</string>
    <string name="System">Sistema</string>
    <string name="Refrinter">Refrescar tiempos de intervalo</string>
    <string name="Restartneed">Reinicie si es necesario</string>
    <string name="Contact">Contacto</string>
    <string name="Information">Informacion</string>
    <string name="Version">Software version</string>
    <string name="Helpinformationandcredits">Help information and credits</string>
    <string name="Yourproposal">Su Propuesta</string>
    <string name="Sendemailwithyourideas">Envie E-Mail con sus Ideas</string>
    <string name="Reset">Resetear y Reiniciar</string>
    <string name="Deleteallissuedatastoredlocallytoyourphone">Eliminar todos los datos almacenados en su telefono</string>
    <string name="Areyousure">Esta usted seguro</string>
    <string name="Deleted">Eliminado</string>
    <string name="WhatIsItTitle">Descripcion</string>
    <string name="FeaturesTestsTitle">Caracteristicas</string>
    <string name="ContactInfoTitle">Autores</string>
    <string name="WhatIsIt">ImproveMyCityMobile es una aplicación para telefonos moviles que permite a los ciudadanos a reportar todo tipo de temas relacionados con su zona (por ejemplo, laboratorios rotos, coches abandonados, ausencia de contenedores, etc.) Los problemas reportados se transfieren inmediatamente al departamento municipal correspondiente, a fin de ser arreglados. ImproveMyCityMobile es la mejor solución para los ciudadanos para mejorar su ciudad, en colaboración con su administración. \ N \ n
         Municipio:. \ Esta aplicación móvil ha sido adaptado a las necesidades de la comarca del Camp de Morvedre y está totalmente interconectada con la aplicación basada en la web correspondiente (http://www.citizenship.es/alerts) \ n \ n
         Fronteras Municipio: \ n construido usando los datos geodésicos del sitio
         \ "Datos de los sectores público y abierto \" (http://www.geodata.gov.gr/) proporcionados por la
         \ "Instituto para la Gestión de la Información del Centro de Investigación de Sistemas - Athena \" (http://www.imis.athena-innovation.gr/) y el
         \ "Centro Nacional de Administración Pública y Gobierno Local \" (http://www.opengov.gr)</string>
    <string name="FeaturesTests">
- Extracción automática de las coordenadas GPS del problema reportado, \ n
- Fotografiar el problema usando la camara del teléfono \ n
- Votación y / o comentarios sobre los temas ya reportados por otros ciudadanos ver mapa basado en la
los problemas notificados; \ n
-. Comentarios sobre el estado de avance de los problemas reportados \ n \ n
        
Requisitos técnicos: \ n
- Versión de Android 2.2 (Froyo API 8) o posterior; \ n
- 1 MB de RAM para instalar y 10 ΜΒ de RAM para funcionar; \ n
- Procesador de 1 GHz; \ n
- Acceso a Internet; \ n
- GPS y la cámara (opcional) \ n \ n

Informe su opinión: \ n
- Por correo electrónico a soporte@todored.info
    </string>
    <string name="ContactInfo">
        TODORED Internet Services (http://www.todored.es) \n AUTH-URENIO (http://www.urenio.org)</string>
     <string name="LogOut">Salir</string>
     <string name="LoggedOut">Desconectado</string>
     <string name="SendMail">Enviar E-Mail</string>
     <string name="About">Acerca de</string>
    <string name="Usage">Uso de la Aplicacion</string>
	<string name="Analytics">Compartir Analisis</string>
	<string name="HelpUs">Ayude a la eficiencia de esta APP con el envio de sus datos</string>
    <string name="Register">Registro</string>
    <string name="FirstSecondName">Primer y Segundo Nombre*</string>
    <string name="ValidEmail">E-Mail Valido</string>
    <string name="MoreThan6Chars">Mas de 7 Caracteres</string>
    <string name="Cancel">Cancelar</string>
    <string name="Submit">Enviar</string>
	<string name="Welcome">Bienvenid@s</string>
	<string name="NoInternet">Sin Internet</string>
	<string name="NoGPS">Por favor active GPS</string>
	<string name="IncorUser">Usuario o Contraseña incorrect@. Esta Registrad@?</string>
	<string name="DownloadingFirst">Descargando por primera vez, por favor espere 5 segs.</string>
	<string name="NoGPSnoWiFi">No GPS, No Wi-Fi Conexion. Por favor active!</string>
	<string name="Icannotfindyourpos">No podemos determinar su posicion!</string>
    <string name="SyncData">Sincronizando datos</string>
    <string name="Refresh">Refrescar</string>
    <string name="DistanceView">Incidencia dentro de nuevo rango</string>
    <string name="IssuesNoCh">Listado de ultimas Incidencias</string>
    <string name="NewIssueCh">Refresque datos para tomar nueva Incidencia</string>
    <string name="LocationCh">Incidencias cerca de su localizacion</string>
    <string name="PressBackFirst">Presione volver primero</string>
    <string-array name="refrateoptions">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>60</item>
        <item>off</item>
    </string-array>
    <string-array name="refrateoptions_entries">
        <item>1 minuto</item>
        <item>5 minutos (recomendado)</item>
        <item>10 minutos</item>
        <item>1 hora</item>
        <item>off</item>
    </string-array>
    <string-array name="maxno_issues">
        <item>20</item>
        <item>40</item>
        <item>80</item>
        <item>200</item>
        <item>400</item>
    </string-array>
    <string-array name="maxno_issues_entries">
        <item>20 incidencias</item>
        <item>40 incidencias (recomendado)</item>
        <item>80 incidencias</item>
        <item>100 incidencias</item>
        <item>400 incidencias</item>
    </string-array>
</resources>