<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        android:title="@string/Setup"
        android:key="mySettings"
        >

     
     <PreferenceCategory
           android:key="CategCustom"  
           android:title="@string/CustAccount"
           android:layout="@layout/pref_categories_layout"
           >
        
         <com.mk4droid.IMC_Core.Preference_AccountOperations
			android:key="Account_Operations_IMC"
			android:title="@string/AccountOperations"
			android:summary="@string/LoginRegisterRemindLogout"
			android:enabled = "true"/>
     </PreferenceCategory>
     
                        
     <PreferenceCategory
                android:key="CategLang"
                android:title="@string/Language"
                android:layout="@layout/pref_categories_layout">
        <ListPreference android:title="Language" android:summary="@string/LangSel" android:key="LanguageAR"
                         android:defaultValue="en - English"
                         android:entries="@array/Language"
                        android:entryValues="@array/Language" />
     </PreferenceCategory>
     
        
     <PreferenceCategory
                android:key="CategSystem"
                android:title="@string/System"
                android:layout="@layout/pref_categories_layout">
        

        <com.mk4droid.IMC_Core.Preference_SeekBar
			android:key="distance_seekBar"
			android:title="@string/ViewRange"
			android:summary="@string/ViewRadius"
			android:enabled = "false"/>

            
        <ListPreference android:title="@string/Refrinter" 
                        android:summary="@string/Restartneed" 
                        android:key="RefrateAR"
                        android:defaultValue="5" 
                        android:entries="@array/refrateoptions_entries"
                        android:entryValues="@array/refrateoptions" />
        <ListPreference android:title="@string/IssuesNo" 
                        android:summary="@string/IssuesMaxNo" 
                        android:key="IssuesNoAR"
                        android:defaultValue="40" 
                        android:entries="@array/maxno_issues_entries"
                        android:entryValues="@array/maxno_issues" />
         <CheckBoxPreference
                        android:title="@string/Analytics"
                        android:defaultValue="false"
                        android:summary="@string/HelpUs"
                        android:key="AnalyticsSW"/>
     </PreferenceCategory>
      
     <PreferenceCategory
                android:key="CategAbout"
                android:title="@string/About"
                android:layout="@layout/pref_categories_layout">
         
             
        <com.mk4droid.IMC_Core.Preference_PlainText
            android:key="Version"
			android:title="@string/Version"
			android:summary=""/>

        <com.mk4droid.IMC_Core.Preference_About
            android:key="About"
			android:title="@string/About"
			android:summary="@string/Helpinformationandcredits"/>
        
        <com.mk4droid.IMC_Core.Preference_Email
            android:key="Email"
			android:title="@string/Yourproposal"
			android:summary="@string/Sendemailwithyourideas"
            />
        
        <com.mk4droid.IMC_Core.Preference_Reset
            android:key="Reset"
			android:title="@string/Reset"
			android:summary="@string/Deleteallissuedatastoredlocallytoyourphone"/>
   </PreferenceCategory>
     
        
</PreferenceScreen>


 
    
      
