<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="250dp"
    android:layout_height="250dp"
    android:orientation="vertical" 
    android:gravity="center"
    android:background="#790102"
    android:layout_gravity="center">


    <EditText 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etSetupUsername"
        android:layout_margin="5dp"
        android:hint="@string/Username"
        android:singleLine="true"/>
    
    <EditText 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etSetupPassword"
        android:layout_margin="5dp"
        android:inputType="textPassword"
        android:hint="@string/Password"/>

    <Button
        android:id="@+id/btSetupLogin"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/gradient_green"
        android:drawableLeft="@drawable/tick"
        android:padding="10dp"
        android:text="@string/Login"
        android:textColor="#fff"
        android:textStyle="bold" />
</LinearLayout>

