<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:background="#fff" >

    
     <TextView
                android:id="@+id/tvFiltTitle_Issues"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient_blue"
                android:gravity="center"
                android:text="@string/Filters"
                android:textColor="@color/wh"
                android:textAppearance ="?android:attr/textAppearanceMedium" 
                />

     <!-- 
     <TextView
         android:id="@+id/textView1"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/State"
         android:background="#999"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 -->

     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >

         <TableRow
             android:id="@+id/tableRow1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
             
             <CheckBox
            android:id="@+id/chb_Open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#111"
            android:layout_gravity="left"
            android:checked="true"
            android:text="@string/OpenIssue"
            android:textSize="6pt" />

        <CheckBox
            android:id="@+id/chb_Ack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:textColor="#111"
            android:text="@string/AckIssue"
            android:textSize="6pt" />
             
             
         </TableRow>

         <TableRow
             android:id="@+id/tableRow2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
        
             <CheckBox
            android:id="@+id/chb_Closed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:textColor="#111"
            android:layout_gravity="left"
            android:checked="true"
            android:text="@string/ClosedIssue"
            android:textSize="6pt" />
        
        <CheckBox
            android:id="@+id/chb_MyIssues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:textColor="#111"
            android:layout_gravity="left"
            android:checked="false"
            android:text="@string/MyIssues"
            android:textSize="6pt" />
     
             
         </TableRow>

        
     </TableLayout>
    
        
        
        
         
     <!--
        <TextView
         android:id="@+id/textView1"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/Category"
         android:layout_marginBottom="5dp"
         android:background="#999"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 -->
 
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:gravity       ="right" 
        android:layout_marginBottom="5dp">
    
    <Button
        android:id            ="@+id/btSelectAllFilters"
        style                 ="?android:attr/buttonStyleSmall"
        android:layout_width  ="wrap_content"
        android:layout_height ="30dp"
        android:layout_gravity="right"
        android:gravity       ="right"
        android:text          ="@string/SelAll"
         />
        
        
    
    <Button
        android:id            ="@+id/btReverseAllFilters"
        style                 ="?android:attr/buttonStyleSmall"
        android:layout_width  ="wrap_content"
        android:layout_height ="30dp"
        android:layout_gravity="right"
        android:gravity       ="right"
        android:text          ="@string/Reverse"
         />
    </TableRow>

    
   
    
    
    <ExpandableListView
        android:id="@+id/elvMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:cacheColorHint="#fff"
         />

    <!--
        android:descendantFocusability="afterDescendants" 
        android:childDivider="#00000000" 
        android:background="@null" 
        android:cacheColorHint="#00000000" 
        android:scrollbarSize="10px" 
        android:scrollbars="vertical"

    -->

    
    
</LinearLayout>

